tests/baselines/reference/project/emitDecoratorMetadataSystemJSISolatedModules/node/emitDecoratorMetadataSystemJSISolatedModules.errors.txt
tsconfig.json(6,25): error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
main.ts(1,21): error TS2792: Cannot find module 'angular2/core'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


==== tsconfig.json (1 errors) ====
    {
      "compileOnSave": true,
      "compilerOptions": {
        "target": "es5",
        "module": "system",
        "moduleResolution": "node",
                            ~~~~~~
!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
        "emitDecoratorMetadata": true,
        "experimentalDecorators": true,
        "isolatedModules": true
      },
      "files": [
        "main.ts"
      ]
    }
==== main.ts (1 errors) ====
    import * as ng from "angular2/core";
                        ~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'angular2/core'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    
    declare function foo(...args: any[]);
    
    @foo
    export class MyClass1 {
        constructor(private _elementRef: ng.ElementRef){}
    }